# ChangeLog for games-fps/tribes2
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/tribes2/ChangeLog,v 1.6 2004/09/29 02:01:42 wolf31o2 Exp $

  28 Sep 2004; Chris Gianelloni <wolf31o2@gentoo.org> tribes2-25034.ebuild:
  Added DEPEND on loki_patch and closing bug #53924.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> tribes2-25034.ebuild:
  virtual/glibc -> virtual/libc

  16 Feb 2004; Chris Gianelloni <wolf31o2@gentoo.org> tribes2-25034.ebuild:
  Added die if license check is failed.

  11 Feb 2004; Chris Gianelloni <wolf31o2@gentoo.org> tribes2-25034.ebuild:
  Added RESTRICT=nomirror.

*tribes2-25034 (11 Feb 2004)

  11 Feb 2004; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml,
  tribes2-25034.ebuild:
  Initial import into portage. Ebuild subitted by Adam Mondl
  <tocharian@trilug.org> and modified by me. Closing bug #36276.
