@@ -1,4 +1,4 @@
-MD5 3e37b1680853152ceb5a0ee9a3732cf3 tribes2-25034.ebuild 2493
-MD5 699d5b9d340fbafe4aa8d9cf6b6c6ac5 ChangeLog 921
+MD5 71fb60ab342580e0f9cf7b388e76d89b tribes2-25034.ebuild 2189
+MD5 9de720fcde933da77c1554823ecf6ff7 ChangeLog 1036
 MD5 a8fa27333bd9c958c15ac1cd257dee9a metadata.xml 291
 MD5 e233aa911d31f0d4ff66f8d5c95d898b files/digest-tribes2-25034 74
