@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/tribes2
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/tribes2/ChangeLog,v 1.6 2004/09/29 02:01:42 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/tribes2/ChangeLog,v 1.7 2004/09/29 03:10:14 wolf31o2 Exp $
+
+  28 Sep 2004; Chris Gianelloni <wolf31o2@gentoo.org> tribes2-25034.ebuild:
+  QA cleanup and more error checking.
 
   28 Sep 2004; Chris Gianelloni <wolf31o2@gentoo.org> tribes2-25034.ebuild:
   Added DEPEND on loki_patch and closing bug #53924.
